gccida/c2/visualize_scheduled_insns
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/visualize_scheduled_insns/src/sched-vis.c:1384:30: error: use of undeclared identifier 'unk_710117'
sprintf( &v8[v9], " %-33s", &unk_710117); 
                             ^
1 error generated.
make: *** [/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/visualize_scheduled_insns/src/obj/sched-vis.o] Error 1
